# rawrxd-recovery-docs

./: .gitignore  .gitmodules  2-LINE-OFFSET-FIX.md  AGENTIC-FIXES-SUCCESS-REPORT.md  AGENTIC-TEST-RESULTS.md  AGENTIC_CAPABILITIES_SHOWCASE.md  AGENTIC_CAPABILITIES_VERIFICATION.md  AGENTIC_DOCUMENTATION_INDEX.md  AGENTIC_TEST_COMPLETE_SUMMARY.md  AGENTIC_TEST_FINAL_REPORT.md  AGENTIC_TEST_SUITE_RESULTS.md  AGENTIC_VERIFICATION_COMPLETE.md  Advanced-Feature-Testing.ps1  Analyze-Custom-Model-Performance.ps1  Analyze-Model-Limits.ps1  Analyze-Model-Types.ps1  Analyze-RawrXD-Popups.ps1  Build-EXE.ps1  CHAT-INPUT-POSITIONING-FIXES.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_MODEL_TESTING_PLAN.md  COUNT-PROPERTY-FIXES-v3.0.7.0.md  CUSTOM_MODELS_PUPPETEER_TECHNICAL_GUIDE.md  Complete-IDE-Agentic-Comparison.ps1  Complete-Popup-Elimination.ps1  DOCUMENTATION_INDEX.md  Debug-File-Opening.ps1  Discover-All-Features.ps1  ENHANCEMENT-COMPLETION-REPORT.md  EXECUTIVE_SUMMARY.md  Explain-Cloud-Models.ps1  FILE-OPENING-FIX-REPORT.md  FINAL-AGENTIC-SUMMARY.md  FINAL-COUNT-PROPERTY-FIXES-v3.0.8.0.md  FULL_IMPLEMENTATION_REPORT.md  Find-Hidden-Features.ps1  Find-Missing-And-Broken-Features.ps1  Fix-Agent-Summary-Command.ps1  Fix-Agentic-Test-Errors.ps1  Fix-All-Agent-Commands.ps1  (+73 more)
Modelfiles/: bigdaddyg-agentic.Modelfile  bigdaddyg-fast-agentic.Modelfile  cheetah-stealth-agentic.Modelfile
RawrXD-ModelLoader/: .gitmodules  ADVANCED_FEATURES_ARCHITECTURE.md  ADVANCED_FEATURES_EXECUTIVE_SUMMARY.md  ADVANCED_FEATURES_INDEX.md  AGENTIC_INTEGRATION_COMPLETE.md  AGENTIC_WEB_PROJECTS.md  AGENT_COORDINATOR_TESTS_BUILD_REPORT.md  ANALYSIS_COMPLETE.md  ANALYSIS_INDEX.md  ARCHITECTURE-EDITOR.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_INDEX.md  AUTONOMOUS-AGENT-GUIDE.md  AUTONOMOUS_AGENT_IMPLEMENTATION_ROADMAP.md  BEFORE_AFTER_COMPARISON.md  BEFORE_AFTER_TRANSFORMATION.md  BENCHMARKING_FRAMEWORK.md  BENCHMARKS.md  BOTTLENECK_10_TEST_FIXTURE_FIX.md  BOTTLENECK_9_STATUS_CACHE_FIX.md  BOTTLENECK_AUDIT_REPORT.md  BOTTLENECK_QUICK_REFERENCE.md  BPE_ALGORITHM_REVERSE_ENGINEERED.md  BUILD_COMPLETE.md  CHAT-APP-DELIVERY.md  CHAT-APP-IMPLEMENTATION.md  CHAT-APP-MANIFEST.md  CHAT-APP-QUICKSTART.md  CHAT-APP-README.md  CLANG-BUILD-GUIDE.md  CMakeLists.txt  CMakeLists.txt.backup  CMakeLists.txt.old  CODE_REVIEW_FIXES_APPLIED.md  COMPLETION-REPORT.md  COPILOT_AUTOMATION_COMPLETE.md  COPILOT_INSTRUCTIONS_AUTOMATION.md  COPILOT_INSTRUCTIONS_GENERATED.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_MISSING_FEATURES_FIX_GUIDE.md  (+80 more)
RawrXD-ModelLoader/src/git/: CMakeLists.txt  ai_merge_resolver.cpp  ai_merge_resolver.hpp  semantic_diff_analyzer.cpp  semantic_diff_analyzer.hpp
RawrXD-ModelLoader/src/orchestration/: CMakeLists.txt  agent_coordinator.cpp  agent_coordinator.hpp  llm_router.cpp  llm_router.hpp  voice_processor.cpp  voice_processor.hpp
RawrXD-ModelLoader/src/terminal/: CMakeLists.txt  sandboxed_terminal.cpp  sandboxed_terminal.hpp  zero_retention_manager.cpp  zero_retention_manager.hpp
RawrXD-ModelLoader/src/tools/: CMakeLists.txt  file_ops.cpp  git_client.cpp  multi_model_benchmark.cpp  real_multi_model_benchmark.cpp  simple_gpu_test.cpp
Recovery Chats/: Concepts.txt  New Text Document.txt  REcovery 2.txt  REcovery 24.txt  REcovery 5.txt  REcvoery 3.txt  Rawr.txt  Recovery 10.txt  Recovery 11.txt  Recovery 12.txt  Recovery 13.txt  Recovery 14.txt  Recovery 15.txt  Recovery 16.txt  Recovery 17.txt  Recovery 18.txt  Recovery 19.txt  Recovery 20.txt  Recovery 21.txt  Recovery 22.txt  Recovery 23.txt  Recovery 4.txt  Recovery 6.txt  Recovery 7.txt  Recovery 8.txt  Recovery 9.txt  Recvoery 24.txt
extensions/: PoshLLM.psm1  README_EXTENSION.md
hotpatch_test_results/: HOTPATCH_TEST_2025-12-04_214259.txt  HOTPATCH_TEST_2025-12-04_214625.txt  HOTPATCH_TEST_2025-12-04_215618.txt  (+1 more)
(+890 files in other folders)
